--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # 👈 USE THIS INSTEAD OF "ubuntu-latest"
 
     steps:
       - name: Checkout code
@@ -28,7 +28,7 @@ jobs:
           pytest --junitxml=test-reports/results.xml
 
       - name: Upload test report
-        uses: actions/upload-artifact@v3.1.3  # 👈 This version works with Ubuntu 24.04
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: test-results
           path: test-reports/results.xml
